--- a/style.css
+++ b/style.css
@@ -1,10 +1,30 @@
 .container {
-    border: 1px solid black;
-    background-color: rgb(179, 221, 221);
+  border: 1px solid black;
+  background-color: rgb(179, 221, 221);
 }
 
-
 .border {
-    border: 1px solid rgb(194, 63, 63);
-    background-color: rgb(174, 195, 226);
+  border: 1px solid rgb(194, 63, 63);
+  background-color: rgb(174, 195, 226);
+}
+
+/* .img-smurf {
+  width: 196px;
+  height: 177px;
+  background-image: url(./pictures/pic1.png);
+} */
+
+/* .img-surf {
+  
+  max-height: 30vh;
+} */
+
+.img-fluid {
+  max-height: 65vh;
+}
+
+.img-members{
+    max-height: 20vh;
+    
+    
 }
