--- a/style.css
+++ b/style.css
@@ -1,26 +1,15 @@
 body {
-  color: #2228c5;
+  color: #0077c2;
 }
 .container {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   /* background-color: rgb(179, 221, 221); */
 }
 
 .border {
-  border: 1px solid rgb(194, 63, 63);
+  /* border: 1px solid rgb(194, 63, 63); */
   /* background-color: rgb(174, 195, 226); */
 }
-
-/* .img-smurf {
-  width: 196px;
-  height: 177px;
-  background-image: url(./pictures/pic1.png);
-} */
-
-/* .img-surf {
-  
-  max-height: 30vh;
-} */
 
 .img-fluid {
   max-height: 50vh;
@@ -31,7 +20,7 @@ body {
   max-width: 100%;
 }
 .blue-bg {
-  background-color: #1f1bd3;
+  background-color: #42a5f5;
 }
 
 #messages {
@@ -43,6 +32,19 @@ textarea {
   width: 100%;
 }
 
-figure {
-  margin: 0;
+a:hover, i:hover {
+  color: rgb(53, 36, 212);
+  text-decoration: none;
+  
+}
+
+a:visited,
+a:active,
+i:visited,
+i:active {
+  color:white;
+}
+
+.btn-primary {
+  background-color: #42a5f5;
 }
